[project]
name = "get-papers-list"
version = "0.1.0"
description = ""
authors = [
    {name = "sanjeev ch",email = "112742845+sanjudev1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "get_papers_list", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get_papers_list = "src.get_papers_list.get_papers:main"